--- a/StoreApi/appsettings.Development.json
+++ b/StoreApi/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "StoreConnection": "Data Source=CA-SAL-038;Initial Catalog=StoreDb;Integrated Security=True"
   }
 }
