--- a/StoreApi/appsettings.json
+++ b/StoreApi/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "Jwt": {
+    "SigningSecret": "ZWU0YzYyNGEtYTk0Ni00YWZjLWJjZTctMjU3NWQ5OTFmOGE0",
+    "ExpiryDuration": 10 // minutes
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
