--- a/Store.Core/Store.Core.csproj
+++ b/Store.Core/Store.Core.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Store.Common\Store.Common.csproj" />
   </ItemGroup>
 
