Adding domain events to handle product logs

--- a/StoreApi/appsettings.Development.json
+++ b/StoreApi/appsettings.Development.json
@@ -12,6 +12,6 @@
     }
   },
   "ConnectionStrings": {
-    "StoreConnection": "Data Source=CA-SAL-038;Initial Catalog=StoreDb;Integrated Security=True"
+    "StoreConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=StoreDb;Integrated Security=True"
   }
 }
